@@ -1,12 +1,17 @@
 package com.hcmute.fit.toeicrise.services.impl;
 
 import com.hcmute.fit.toeicrise.commons.constants.Constant;
+import com.hcmute.fit.toeicrise.commons.utils.CloudinaryUtil;
 import com.hcmute.fit.toeicrise.commons.utils.HelperUtil;
 import com.hcmute.fit.toeicrise.dtos.requests.useranswer.UserAnswerRequest;
 import com.hcmute.fit.toeicrise.dtos.requests.usertest.PartStats;
 import com.hcmute.fit.toeicrise.dtos.requests.usertest.ScoreAccumulator;
 import com.hcmute.fit.toeicrise.dtos.requests.usertest.TagStats;
 import com.hcmute.fit.toeicrise.dtos.requests.usertest.UserTestRequest;
+import com.hcmute.fit.toeicrise.dtos.requests.usertest.speaking.SpeakingAnswerSubmissionRequest;
+import com.hcmute.fit.toeicrise.dtos.requests.usertest.speaking.SpeakingTestSubmissionRequest;
+import com.hcmute.fit.toeicrise.dtos.requests.usertest.writing.WritingAnswerSubmissionRequest;
+import com.hcmute.fit.toeicrise.dtos.requests.usertest.writing.WritingTestSubmissionRequest;
 import com.hcmute.fit.toeicrise.dtos.responses.analysis.AnalysisResultResponse;
 import com.hcmute.fit.toeicrise.dtos.responses.analysis.ExamTypeFullTestResponse;
 import com.hcmute.fit.toeicrise.dtos.responses.analysis.ExamTypeStatsResponse;
@@ -22,6 +27,8 @@ import com.hcmute.fit.toeicrise.dtos.responses.usertest.TestResultResponse;
 import com.hcmute.fit.toeicrise.dtos.responses.usertest.UserAnswerGroupedByTagResponse;
 import com.hcmute.fit.toeicrise.dtos.responses.learner.*;
 import com.hcmute.fit.toeicrise.dtos.responses.useranswer.UserAnswerOverallResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.usertest.speakingwriting.SpeakingWritingTestResultOverallResponse;
+import com.hcmute.fit.toeicrise.dtos.responses.usertest.speakingwriting.SpeakingWritingTestResultResponse;
 import com.hcmute.fit.toeicrise.exceptions.AppException;
 import com.hcmute.fit.toeicrise.models.entities.*;
 import com.hcmute.fit.toeicrise.models.enums.*;
@@ -50,6 +57,7 @@ import static java.util.stream.Collectors.toList;
 @RequiredArgsConstructor
 @Slf4j
 public class UserTestServiceImpl implements IUserTestService {
+    private static final int MAX_FULL_TEST_RESULT_SIZE = 10;
     private final IQuestionService questionService;
     private final IQuestionGroupService questionGroupService;
     private final ITestService testService;
@@ -62,10 +70,9 @@ public class UserTestServiceImpl implements IUserTestService {
     private final QuestionGroupMapper questionGroupMapper;
     private final PageResponseMapper pageResponseMapper;
     private final QuestionMapper questionMapper;
-
     private final Map<Integer, Integer> estimatedReadingScoreMap = Constant.estimatedReadingScoreMap;
     private final Map<Integer, Integer> estimatedListeningScoreMap = Constant.estimatedListeningScoreMap;
-    private static final int MAX_FULL_TEST_RESULT_SIZE = 10;
+    private final CloudinaryUtil cloudinaryUtil;
 
     @Override
     public TestResultResponse getUserTestResultById(String email, Long userTestId) {
@@ -74,6 +81,13 @@ public class UserTestServiceImpl implements IUserTestService {
 
         Map<String, List<UserAnswerGroupedByTagResponse>> groupedAnswers = groupUserAnswersByPartAndTag(userTest);
         return userTestMapper.toTestResultResponse(userTest, groupedAnswers);
+    }
+
+    @Override
+    public SpeakingWritingTestResultResponse getSpeakingWritingTestResultById(String email, Long userTestId) {
+        UserTest userTest = findById(userTestId);
+        checkUserTestEqualEmail(email, userTest);
+        return userTestMapper.toSpeakingWritingTestResultResponse(userTest);
     }
 
     @Override
@@ -117,6 +131,100 @@ public class UserTestServiceImpl implements IUserTestService {
         calculate(userTest, request.getAnswers());
         userTestRepository.save(userTest);
         return userTestMapper.toTestResultOverallResponse(userTest);
+    }
+
+    @Transactional
+    @Override
+    public SpeakingWritingTestResultOverallResponse submitWritingTest(String email, WritingTestSubmissionRequest request) {
+        User user = userService.getUserByEmail(email);
+        Test test = testService.getTestById(request.getTestId());
+
+        List<Long> questionIds = request.getAnswers().stream()
+                .map(WritingAnswerSubmissionRequest::getQuestionId)
+                .distinct()
+                .toList();
+        List<Question> questions = questionService.getQuestionsWithGroupsAndPartsByIds(questionIds);
+        Map<Long, Question> questionMap = questions.stream().collect(Collectors.toMap(Question::getId, q -> q));
+        UserTest userTest = UserTest.builder()
+                .user(user)
+                .test(test)
+                .totalQuestions(request.getAnswers().size())
+                .timeSpent(request.getTimeSpent())
+                .parts(request.getParts())
+                .build();
+        List<UserAnswer> userAnswers = new ArrayList<>();
+        int correctAnswers = 0;
+
+        for (WritingAnswerSubmissionRequest answerRequest : request.getAnswers()) {
+            Question question = questionMap.get(answerRequest.getQuestionId());
+            QuestionGroup questionGroup = question.getQuestionGroup();
+            UserAnswer userAnswer = UserAnswer.builder()
+                    .userTest(userTest)
+                    .question(question)
+                    .questionGroupId(questionGroup.getId())
+                    .answerText(answerRequest.getAnswerText())
+                    .isCorrect(answerRequest.getAnswerText() != null && !answerRequest.getAnswerText().isBlank())
+                    .build();
+            userAnswers.add(userAnswer);
+            if (answerRequest.getAnswerText() != null && !answerRequest.getAnswerText().isBlank())
+                correctAnswers++;
+        }
+        userTest.setCorrectAnswers(correctAnswers);
+        userTest.setUserAnswers(userAnswers);
+
+        testService.incrementNumberOfLearnersSubmit(test);
+        userTestRepository.save(userTest);
+
+        return userTestMapper.toSpeakingWritingTestResultOverallResponse(userTest);
+    }
+
+    @Transactional
+    @Override
+    public SpeakingWritingTestResultOverallResponse submitSpeakingTest(String email, SpeakingTestSubmissionRequest request) {
+        User user = userService.getUserByEmail(email);
+        Test test = testService.getTestById(request.getTestId());
+
+        List<Long> questionIds = request.getAnswers().stream()
+                .map(SpeakingAnswerSubmissionRequest::getQuestionId)
+                .distinct()
+                .toList();
+        List<Question> questions = questionService.getQuestionsWithGroupsAndPartsByIds(questionIds);
+        Map<Long, Question> questionMap = questions.stream().collect(Collectors.toMap(Question::getId, q -> q));
+        UserTest userTest = UserTest.builder()
+                .user(user)
+                .test(test)
+                .totalQuestions(request.getAnswers().size())
+                .timeSpent(request.getTimeSpent())
+                .parts(request.getParts())
+                .build();
+        List<UserAnswer> userAnswers = new ArrayList<>();
+        int correctAnswers = 0;
+
+        for (SpeakingAnswerSubmissionRequest answerRequest : request.getAnswers()) {
+            Question question = questionMap.get(answerRequest.getQuestionId());
+            QuestionGroup questionGroup = question.getQuestionGroup();
+            UserAnswer userAnswer = UserAnswer.builder()
+                    .userTest(userTest)
+                    .question(question)
+                    .questionGroupId(questionGroup.getId())
+                    .isCorrect(answerRequest.getAnswerAudio() != null)
+                    .build();
+            if (answerRequest.getAnswerAudio() != null) {
+                cloudinaryUtil.validateAudioFile(answerRequest.getAnswerAudio());
+                String audioUrl = cloudinaryUtil.uploadFile(answerRequest.getAnswerAudio());
+                userAnswer.setAnswerAudioUrl(audioUrl);
+            }
+            userAnswers.add(userAnswer);
+            if (answerRequest.getAnswerAudio() != null)
+                correctAnswers++;
+        }
+        userTest.setCorrectAnswers(correctAnswers);
+        userTest.setUserAnswers(userAnswers);
+
+        testService.incrementNumberOfLearnersSubmit(test);
+        userTestRepository.save(userTest);
+
+        return userTestMapper.toSpeakingWritingTestResultOverallResponse(userTest);
     }
 
     @Override
@@ -182,7 +290,7 @@ public class UserTestServiceImpl implements IUserTestService {
                             listening.buildExamTypeStatsResponse(0, 0, Map.of(), Map.of()),
                             reading.buildExamTypeStatsResponse(0, 0, Map.of(), Map.of())))
                     .build();
-        int numberOfTests = (int)userTests.stream().map(ut -> ut.getTest() != null ? ut.getTest().getId() : null)
+        int numberOfTests = (int) userTests.stream().map(ut -> ut.getTest() != null ? ut.getTest().getId() : null)
                 .filter(Objects::nonNull)
                 .distinct()
                 .count();
@@ -195,7 +303,7 @@ public class UserTestServiceImpl implements IUserTestService {
                 .collect(Collectors.toSet());
         Map<Long, Question> questionMapWithTags = questionIds.isEmpty() ? new HashMap<>() :
                 questionService.findAllQuestionByIdWithTags(questionIds).stream()
-                        .collect(Collectors.toMap(Question::getId, q -> q));
+                .collect(Collectors.toMap(Question::getId, q -> q));
         userTests.forEach(ut -> {
             if (ut.getUserAnswers() != null) {
                 ut.getUserAnswers().forEach(userAnswer -> {
@@ -236,7 +344,7 @@ public class UserTestServiceImpl implements IUserTestService {
             correctAnswersListening += ut.getListeningCorrectAnswers() != null ? ut.getListeningCorrectAnswers() : 0;
             totalQuestionsReading += ut.getTotalReadingQuestions() != null ? ut.getTotalReadingQuestions() : 0;
             correctAnswersReading += ut.getReadingCorrectAnswers() != null ? ut.getReadingCorrectAnswers() : 0;
-            
+
             List<UserAnswer> userAnswers = ut.getUserAnswers();
             if (userAnswers == null || userAnswers.isEmpty()) continue;
 
@@ -250,6 +358,8 @@ public class UserTestServiceImpl implements IUserTestService {
                 List<UserAnswer> answersInPart = entry.getValue();
 
                 if (partName == null) continue;
+                if (partName.contains("Writing") || partName.contains("Speaking"))
+                    continue; // Ignore Speaking and Writing part
                 EPart part = EPart.getEPart(partName);
                 EExamType examType = part.isRequiredAudio() ? EExamType.LISTENING : EExamType.READING;
 
@@ -311,7 +421,7 @@ public class UserTestServiceImpl implements IUserTestService {
 
     @Override
     public FullTestResultResponse getFullTestResult(String email, int size) {
-        int limit = Math.min(Math.max(size, 1), MAX_FULL_TEST_RESULT_SIZE);
+        int limit = Math.clamp(size, 1, MAX_FULL_TEST_RESULT_SIZE);
         Pageable pageable = PageRequest.of(0, limit);
         List<UserTest> userTests = userTestRepository.findByUser_Account_EmailAndTest_StatusAndTotalScoreIsNotNullOrderByCreatedAtDesc(email, pageable, ETestStatus.APPROVED);
         List<ExamTypeFullTestResponse> examTypeFullTestResponses = new ArrayList<>();
@@ -409,7 +519,7 @@ public class UserTestServiceImpl implements IUserTestService {
         UserTest userTest = userTestRepository.findUserTestByIdWithWrongAnswer(userTestId, email).orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "User test"));
         LearnerTestPartsResponse learnerTestPartsResponse = testMapper.toLearnerTestPartsResponse(userTest.getTest());
 
-        if (userTest.getUserAnswers() == null|| userTest.getUserAnswers().isEmpty())
+        if (userTest.getUserAnswers() == null || userTest.getUserAnswers().isEmpty())
             learnerTestPartsResponse.setPartResponses(Collections.emptyList());
         else {
             Map<Part, List<UserAnswer>> answersByPart = groupWrongAnswersByPart(userTest.getUserAnswers());
@@ -446,7 +556,7 @@ public class UserTestServiceImpl implements IUserTestService {
     public RetestResultOverallResponse getResultAfterSubmitWrongAnswer(Long userTestId, String email, UserTestRequest request) {
         UserTest userTest = userTestRepository.findUserTestByIdWithWrongAnswer(userTestId, email).orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "User test"));
 
-        if (request == null||request.getAnswers() == null)
+        if (request == null || request.getAnswers() == null)
             throw new AppException(ErrorCode.INVALID_REQUEST);
         List<UserAnswerRequest> answers = request.getAnswers();
         Set<Long> questionIds = answers.stream().map(UserAnswerRequest::getQuestionId).collect(Collectors.toSet());
@@ -521,7 +631,7 @@ public class UserTestServiceImpl implements IUserTestService {
         UserTest userTest = userTestRepository.findUserTestByIdWithWrongAnswer(userTestId, email).orElseThrow(() -> new AppException(ErrorCode.RESOURCE_NOT_FOUND, "User test"));
         LearnerTestPartsResponse learnerTestPartsResponse = testMapper.toLearnerTestPartsResponse(userTest.getTest());
 
-        if (userTest.getUserAnswers() == null|| userTest.getUserAnswers().isEmpty())
+        if (userTest.getUserAnswers() == null || userTest.getUserAnswers().isEmpty())
             learnerTestPartsResponse.setPartResponses(Collections.emptyList());
         else {
             Map<Part, List<UserAnswer>> answersByPart = groupWrongAnswersByPart(userTest.getUserAnswers());
@@ -577,7 +687,7 @@ public class UserTestServiceImpl implements IUserTestService {
             throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Test Result");
     }
 
-    private Map<String, List<UserAnswerGroupedByTagResponse>> groupUserAnswersByPartAndTag(UserTest userTest){
+    private Map<String, List<UserAnswerGroupedByTagResponse>> groupUserAnswersByPartAndTag(UserTest userTest) {
         List<UserAnswer> userAnswers = userTest.getUserAnswers();
         if (userAnswers == null || userAnswers.isEmpty())
             return Collections.emptyMap();
@@ -591,15 +701,15 @@ public class UserTestServiceImpl implements IUserTestService {
             if (partName == null)
                 throw new AppException(ErrorCode.INVALID_REQUEST, "Part name invalid");
             return partName;
-            }, Collectors.collectingAndThen(Collectors.toList(), this::groupByTag))));
+        }, Collectors.collectingAndThen(Collectors.toList(), this::groupByTag))));
     }
 
-    private List<UserAnswerGroupedByTagResponse> groupByTag(List<UserAnswer> answersInPart){
+    private List<UserAnswerGroupedByTagResponse> groupByTag(List<UserAnswer> answersInPart) {
         if (answersInPart == null || answersInPart.isEmpty())
             return List.of();
 
         Map<String, List<UserAnswer>> answersByTag = answersInPart.stream().flatMap(ua -> {
-            if (ua.getQuestion() == null||ua.getQuestion().getTags() == null)
+            if (ua.getQuestion() == null || ua.getQuestion().getTags() == null)
                 return Stream.empty();
             return ua.getQuestion().getTags().stream().map(tag -> Map.entry(tag.getName(), ua));
         }).collect(Collectors.groupingBy(Map.Entry::getKey, Collectors.mapping(Map.Entry::getValue, toList())));
@@ -630,7 +740,7 @@ public class UserTestServiceImpl implements IUserTestService {
         return groupedByTag;
     }
 
-    private void calculate(UserTest userTest, List<UserAnswerRequest> answerRequests){
+    private void calculate(UserTest userTest, List<UserAnswerRequest> answerRequests) {
         boolean isExamMode = userTest.getParts() == null || userTest.getParts().isEmpty();
         ScoreAccumulator accumulator = new ScoreAccumulator();
 
@@ -641,7 +751,7 @@ public class UserTestServiceImpl implements IUserTestService {
             Map<Long, QuestionGroup> groupMap = questionGroupService.findAllByIdsWithQuestions(questionGroupIds).stream()
                     .collect(Collectors.toMap(QuestionGroup::getId, g -> g));
 
-            for (Map.Entry<Long, List<UserAnswerRequest>> e : groupedByGroupId.entrySet()){
+            for (Map.Entry<Long, List<UserAnswerRequest>> e : groupedByGroupId.entrySet()) {
                 QuestionGroup questionGroup = groupMap.get(e.getKey());
                 if (questionGroup == null)
                     throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question group");
@@ -652,7 +762,7 @@ public class UserTestServiceImpl implements IUserTestService {
                     Question question = questionMap.get(userAnswerRequest.getQuestionId());
                     if (question == null)
                         throw new AppException(ErrorCode.RESOURCE_NOT_FOUND, "Question");
-                    calculatorScore(userAnswerRequest,question, accumulator, isListening, userTest);
+                    calculatorScore(userAnswerRequest, question, accumulator, isListening, userTest);
                 }
             }
             int listenScore = estimatedListeningScoreMap.getOrDefault(accumulator.getListeningCorrectAnswers(), 0);
@@ -660,8 +770,7 @@ public class UserTestServiceImpl implements IUserTestService {
             userTest.setListeningScore(listenScore);
             userTest.setReadingScore(readingScore);
             userTest.setTotalScore(listenScore + readingScore);
-        }
-        else {
+        } else {
             List<Long> questionIds = answerRequests.stream().map(UserAnswerRequest::getQuestionId).distinct().toList();
             Map<Long, Question> questionMap = questionService.getQuestionEntitiesByIds(questionIds).stream()
                     .collect(Collectors.toMap(Question::getId, q -> q));
@@ -683,9 +792,9 @@ public class UserTestServiceImpl implements IUserTestService {
     }
 
     private void calculatorScore(UserAnswerRequest userAnswerRequest, Question question, ScoreAccumulator accumulator,
-                                 boolean isListening, UserTest userTest){
+                                 boolean isListening, UserTest userTest) {
         boolean correct = userAnswerRequest.getAnswer() != null && userAnswerRequest.getAnswer().equals(question.getCorrectOption());
-        if (correct){
+        if (correct) {
             accumulator.setCorrectAnswers(accumulator.getCorrectAnswers() + 1);
             if (isListening)
                 accumulator.setListeningCorrectAnswers(accumulator.getListeningCorrectAnswers() + 1);
@@ -707,10 +816,10 @@ public class UserTestServiceImpl implements IUserTestService {
                 .build());
     }
 
-    private Map<Part, List<UserAnswer>> groupWrongAnswersByPart(List<UserAnswer> userAnswers){
+    private Map<Part, List<UserAnswer>> groupWrongAnswersByPart(List<UserAnswer> userAnswers) {
         return userAnswers.stream()
                 .filter(userAnswer -> userAnswer.getQuestion() != null && userAnswer.getQuestion().getQuestionGroup() != null
-                && userAnswer.getQuestion().getQuestionGroup().getPart() != null)
+                        && userAnswer.getQuestion().getQuestionGroup().getPart() != null)
                 .collect(Collectors.groupingBy(userAnswer -> userAnswer.getQuestion().getQuestionGroup().getPart(),
                         LinkedHashMap::new, Collectors.toList()));
     }
